# sagemaker-extension

./: .gitattributes  .gitignore  README.md  README.rst  SECURITY.md  build_language_container.sh  error_code_config.yml  pyproject.toml  release_language_container.sh  sagemaker-extension-0.4.0-1.rockspec  sagemaker-extension-0.4.1-1.rockspec  sagemaker-extension-0.5.0-1.rockspec  sagemaker-extension-0.5.0.rockspec  setup.py
.github/workflows/: build.yaml  build_lua.yaml  build_slow.yaml  bundle.yaml  bundle_lua_scripts.yaml  check_github_pages_docs_for_feature_branch.yaml  check_setup_py.yaml  check_version.yaml  ci-build.yaml  ci.yml  deploy_github_pages_docs_for_main.yaml  generate_sql.yaml  language_container.yaml  luatest.yaml  pytest.yaml  release_droid_prepare_original_checksum.yml  release_droid_upload_github_release_assets.yml
ci-isolation/: pom.xml
doc/: dependencies.md
doc/changes/: changelog.md  changes_0.1.0.md  changes_0.10.0.md  changes_0.11.0.md  changes_0.11.1.md  changes_0.11.2.md  changes_0.11.3.md  changes_0.11.4.md  changes_0.11.5.md  changes_0.11.6.md  changes_0.11.7.md  changes_0.2.0.md  changes_0.2.1.md  changes_0.2.2.md  changes_0.2.3.md  changes_0.3.0.md  changes_0.4.0.md  changes_0.4.1.md  changes_0.5.0.md  changes_0.6.0.md  changes_0.7.0.md  changes_0.8.0.md  changes_0.8.1.md  changes_0.9.0.md  unreleased.md
doc/developer_guide/: developer_guide.md
doc/user_guide/: user_guide.md
exasol_sagemaker_extension/: autopilot_endpoint_deletion_udf.py  autopilot_endpoint_deployment_udf.py  autopilot_handler.py  autopilot_job_status_polling_udf.py  autopilot_prediction.py  autopilot_prediction_udf.py  autopilot_training_status_udf.py  autopilot_training_udf.py  deploy.py  deploy_create_statements.py  train_autopilot_udf.py
exasol_sagemaker_extension/autopilot_utils/: enpoint_deletion.py  enpoint_deployment.py  model_prediction.py  model_training.py  status_polling.py
exasol_sagemaker_extension/deployment/: constants.py  deploy_cli.py  deploy_create_statements.py  generate_create_statement_autopilot_endpoint_deletion.py  generate_create_statement_autopilot_endpoint_deployment.py  generate_create_statement_autopilot_job_status_polling.py  generate_create_statement_autopilot_training.py  generate_create_statement_base.py  generate_create_statement_exporting_sql.py  generate_create_statement_s3_exporting.py  language_container.py  language_container_deployer.py  language_container_deployer_cli.py  main.py  regenerate_scripts.py  sme_language_container_deployer.py
exasol_sagemaker_extension/lua/: aws_s3_handler.lua  execute_exporter.lua  main.lua
exasol_sagemaker_extension/resources/: create_statement_autopilot_endpoint_deletion_udf.sql  create_statement_autopilot_endpoint_deployment_udf.sql  create_statement_autopilot_job_status_polling_udf.sql  create_statement_autopilot_jobs_metadata_table.sql  create_statement_autopilot_training_udf.sql  create_statement_exporting_template.sql  create_statement_template_autopilot_endpoint_deletion_lua_script.sql  create_statement_template_autopilot_endpoint_deployment_lua_script.sql  create_statement_template_autopilot_job_status_polling_lua_script.sql  create_statement_template_autopilot_training_lua_script.sql  create_statement_template_s3_exporting_lua_script.sql  (+2 more)
githooks/: install.sh  post-commit  pre-commit  pre-push  prohibit_commit_to_main.sh  update_setup_py.sh
lua/: aws_s3_handler.lua  execute_exporter.lua
scripts/: bundle.sh  bundle_lua_scripts.sh  check_release_version.py  create_statement_template.sql  create_statement_training.sql  deploy_create_statements.py  generate_create_statement_exporting_sql.py  generate_create_statement_exporting_sql.sh  generate_sql_script.sh  lua_tests.sh  release_language_container.sh  run_integration_test.sh  run_lua_unittests.sh  setup_integration_test.sh
src/lua/: main.lua  (+1 more)
tests/: conftest.py  test_autopilot_training_status_udf_mock.py  test_autopilot_training_status_udf_real.py  test_autopilot_training_udf.py  test_autopilot_training_udf_mock.py  test_autopilot_training_udf_real.py  test_create_statement_training.py  test_sagemaker_extension.py  test_train_autopilot_udf.py
(+125 files in other folders)
