[tool.poetry]
name = "exasol-sagemaker-extension"
version = "0.11.1"
description = "Exasol SageMaker Integration"

license = "MIT"

authors = [
	"Umit Buyuksahin <umit.buyuksahin@exasol.com>",
	"Torsten Kilias <torsten.kilias@exasol.com>"
]

readme = 'README.md'

repository = "https://github.com/exasol/sagemaker-extension"
homepage = "https://github.com/exasol/sagemaker-extension"

keywords = ['exasol', 'sagemaker']

include = ["lua", "resources", "deployment"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = ">=1.4.2,<2.0.0"
boto3 = "1.26.163"
botocore = "1.29.163"
protobuf = ">=3.1,<=3.20.0"
sagemaker = "^2.59.1"
pyexasol = ">=0.26.0,<1"
importlib-resources = "^6.4.0"
click = "^8.0.3"
exasol-python-extension-common = ">=0.8.0,<1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^3.0.0"
Sphinx = "^4.1.2"
coverage = "^6.3"
exasol-udf-mock-python = "^0.1.0"
poethepoet = "^0.13.1"
localstack = "^3.7.2"
localstack-client = "^2.6"
boto3 = "^1.20.40"
toml = "^0.10.2"
gitpython = "^3.1.41"
pytest-exasol-slc = ">=0.3.0,<1"
pytest-exasol-extension = ">=0.2.1,<1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lua-tests = {"shell" = "bash ./scripts/lua_tests.sh"}
