[project]
name = "exasol-sagemaker-extension"
version = "0.11.6"
requires-python = ">=3.10,<4.0"
description = "Exasol SageMaker Integration"
authors = [
	{name="Umit Buyuksahin", email="umit.buyuksahin@exasol.com"},
	{name="Torsten Kilias", email="torsten.kilias@exasol.com"},
]
license = "MIT"
readme = 'README.md'
keywords = ['exasol', 'sagemaker']
dynamic = ["dependencies"]

[poetry.urls]
repository = "https://github.com/exasol/sagemaker-extension"
homepage = "https://github.com/exasol/sagemaker-extension"


[tool.poetry]
requires-poetry = ">=2.1.0"
packages = [
    { include = "exasol_sagemaker_extension" },
]
include = ["lua", "resources", "deployment"]

[tool.poetry.dependencies]
numpy = ">=1.26,<2"
pandas = ">=2.2.3,<3.0.0"
boto3 = "^1.26.163"
botocore = "^1.29.163"
protobuf = "^4.25.8"
sagemaker = "^2.214.3"
pyexasol = ">=0.26.0,<2"
importlib-resources = "^6.4.0"
click = "^8.0.3"
exasol-python-extension-common = ">=0.9.0,<1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pytest-cov = "^3.0.0"
coverage = "^6.3"
exasol-udf-mock-python = ">=0.4.0"
poethepoet = "^0.13.1"
localstack = ">=3.7.2"
localstack-client = "^2.6"
boto3 = "^1.20.40"
toml = "^0.10.2"
gitpython = "^3.1.41"
pytest-exasol-slc = ">=0.4.2,<1"
pytest-exasol-extension = ">=0.2.4,<1"
setuptools = "^80.3.1"

[build-system]
requires = ["setuptools", "poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lua-tests = {"shell" = "bash ./scripts/lua_tests.sh"}

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"